--- a/app/apps/main/templates/dashboard/dashboard.html
+++ b/app/apps/main/templates/dashboard/dashboard.html
@@ -94,13 +94,10 @@
                         </div>
                         <div class="container__bar">
                             <div class="bar-background">
-                                <div class="bar bar--color-primary" style="max-width: 89%;"></div>
-                                <div class="container__slider">
-                                    <div class="slider-wrapper" style="max-width: 89%;">
-                                        <div class="slider"></div>
-                                        <div class="label">
-                                            <span class="animated">89</span>%
-                                        </div>
+                                <div class="bar bar--color-primary" style="max-width: 89%;">
+                                    <div class="slider"></div>
+                                    <div class="label">
+                                        <span class="animated">89</span>%
                                     </div>
                                 </div>
                             </div>
@@ -123,13 +120,10 @@
                         </div>
                         <div class="container__bar">
                             <div class="bar-background">
-                                <div class="bar bar--color-warning" style="max-width: 11%;"></div>
-                                <div class="container__slider">
-                                    <div class="slider-wrapper" style="max-width: 11%;">
-                                        <div class="slider"></div>
-                                        <div class="label">
-                                            <span class="animated">11</span>%
-                                        </div>
+                                <div class="bar bar--color-warning" style="max-width: 11%;">
+                                    <div class="slider"></div>
+                                    <div class="label">
+                                        <span class="animated">11</span>%
                                     </div>
                                 </div>
                             </div>
@@ -648,6 +642,117 @@
                         <div class="footer-chart">
                             <div class="align--center">
                                 <a href="#">Toon meldingen met deze onderwerpen</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section--seperated--l">
+            <div>
+                <h2>Actueel</h2>
+                <div class="grid-container grid-container--3cols">
+                    <div class="grid-item bgc-white">
+                        <div class="container__chart--slider lazy" data-controller="chart-slider">
+                            <div class="header-chart">
+                                <div>
+                                    <span class="h6">
+                                        {% include "icons/dashboard.svg" %}
+                                    Momenteel openstaand</span>
+                                    <h4>
+                                        <span class="animated">523</span> meldingen
+                                    </h4>
+                                </div>
+                            </div>
+                            <div class="container__bar">
+                                <div class="bar-background">
+                                    <div class="bar bar--color-primary" style="max-width: 52.3%;">
+                                        <div class="slider"></div>
+                                        <div class="label">
+                                            <span class="animated">523</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="container__flex">
+                                    <small>0</small>
+                                    <small>1000</small>
+                                </div>
+                            </div>
+                            <div class="footer-chart">
+                                <div class="align--center">
+                                    <a href="#">Toon 523 meldingen</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-item bgc-white">
+                        <div class="container__chart--slider lazy" data-controller="chart-slider">
+                            <div class="header-chart">
+                                <div>
+                                    <span class="h6">
+                                        {% include "icons/dashboard.svg" %}
+                                    Momenteel in behandeling</span>
+                                    <h4>
+                                        <span class="animated">421</span> meldingen
+                                    </h4>
+                                </div>
+                            </div>
+                            <div class="container__bar">
+                                <div class="bar-background">
+                                    <div class="bar bar--color-primary" style="max-width: 42.1%;">
+                                        <div class="slider"></div>
+                                        <div class="label">
+                                            <span class="animated">421</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="container__flex">
+                                    <small>0</small>
+                                    <small>1000</small>
+                                </div>
+                            </div>
+                            <div class="footer-chart">
+                                <div class="align--center">
+                                    <a href="#">Toon 421 meldingen</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-item bgc-white">
+                        <div class="container__chart--slider lazy" data-controller="chart-slider">
+                            <div class="header-chart">
+                                <div>
+                                    <span class="h6">
+                                        {% include "icons/dashboard.svg" %}
+                                    Momenteel vertraagd</span>
+                                    <h4>
+                                        <span class="animated">37</span> meldingen
+                                    </h4>
+                                </div>
+                            </div>
+                            <div class="container__bar">
+                                <div class="bar-background">
+                                    <div class="bar bar--color-primary" style="max-width: 37%;">
+                                        <div class="slider"></div>
+                                        <div class="label">
+                                            <span class="animated">37</span>
+                                        </div>
+                                    </div>
+                                    {% comment %} <div class="container__slider">
+                                        <div class="slider-wrapper" style="max-width: 37%;">
+
+                                        </div>
+                                    </div> {% endcomment %}
+                                </div>
+                                <div class="container__flex">
+                                    <small>0</small>
+                                    <small>100</small>
+                                </div>
+                            </div>
+                            <div class="footer-chart">
+                                <div class="align--center">
+                                    <a href="#">Toon 37 meldingen</a>
+                                </div>
                             </div>
                         </div>
                     </div>
