--- a/app/apps/dashboard/templates/dashboard.html
+++ b/app/apps/dashboard/templates/dashboard.html
@@ -12,21 +12,6 @@
 {% endblock body_class %}
 {% block body %}
     <turbo-frame id="overview" data-turbo-action="advance">
-    <ul>
-        {% if vorige_volgende_week.0 %}
-            <li>
-                <a href="{{ vorige_volgende_week.0.0 }}">Week {{ vorige_volgende_week.0.1 }}</a>
-            </li>
-        {% endif %}
-        <li>
-            <span>Deze week {{ week }}</span>
-        </li>
-        {% if vorige_volgende_week.1 %}
-            <li>
-                <a href="{{ vorige_volgende_week.1.0 }}">Week {{ vorige_volgende_week.1.1 }}</a>
-            </li>
-        {% endif %}
-    </ul>
     <div>
         <h1>Dashboard</h1>
         <p>Jaar: {{ jaar }}, week: {{ week }}</p>
@@ -40,16 +25,10 @@
         </section> {% endcomment %}
         <section class="section--seperated--l">
             <h2>Aantallen</h2>
-            <div class="grid-container"
-                 data-controller="chart-utils"
-                 data-chart-utils-received="{{ melding_aantal }}"
-                 data-chart-utils-open="{{ melding_aantal_noord }}"
-                 data-chart-utils-done="{{ melding_aantal_zuid }}"
-                 data-chart-utils-not-done="{{ melding_aantal_buiten }}">
+            <div class="grid-container" data-controller="chart-utils">
                 <div class="grid-item bgc-white"
                      data-controller="chart-line"
-                     data-chart-line-labels-value='{{ labels|json_encode }}'
-                     data-chart-line-data-value='{ "labels": ["Ma", "Di", "Wo", "Do", "Vr", "Za", "Zo"], "datasets": [{ "label": "Binnengekomen", "borderColor": "#00811F", "fill":true, "backgroundColor": "rgba(0,200,100,0.05)", "data": [{{ melding_aantallen|join:", " }}] }] }'>
+                     data-chart-line-data-value='{{ tabs.0|json_encode }}'>
                     <div class="header-chart">
                         <div class="container__flex">
                             <div>
@@ -57,39 +36,32 @@
                                     {% include "icons/dashboard.svg" %}
                                     Week {{ week }}
                                 </span>
-                                <h4>Nieuwe meldingen</h4>
+                                <h4>
+                                    Nieuwe
+                                    <br>
+                                    meldingen/signalen
+                                </h4>
                             </div>
                             <div>
                                 <ul class="list-horizontal">
-                                    <li>
-                                        <button data-action="chart-line#update"
-                                                data-chart-line-newdata-param="{{ melding_aantallen|join:', ' }}"
-                                                class="active">
-                                            <span class="h3"><span data-chart-utils-target="numbersReceived" class="width--fixed"></span></span>
-                                            <span class="decorated">Heel Rotterdam</span>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button data-action="chart-line#update"
-                                                data-chart-line-newdata-param="{{ melding_aantallen_noord|join:', ' }}">
-                                            <span class="h3"><span data-chart-utils-target="numbersOpen" class="width--fixed"></span></span>
-                                            <span class="decorated">Rotterdam noord</span>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button data-action="chart-line#update"
-                                                data-chart-line-newdata-param="{{ melding_aantallen_zuid|join:', ' }}">
-                                            <span class="h3"><span data-chart-utils-target="numbersDone" class="width--fixed"></span></span>
-                                            <span class="decorated">Rotterdam zuid</span>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button data-action="chart-line#update"
-                                                data-chart-line-newdata-param="{{ melding_aantallen_buiten|join:', ' }}">
-                                            <span class="h3"><span data-chart-utils-target="numbersNotDone" class="width--fixed"></span></span>
-                                            <span class="decorated">Onbekend of buiten Rotterdam</span>
-                                        </button>
-                                    </li>
+                                    {% for tab in tabs %}
+                                        <li>
+                                            <button data-chart-line-target="button"
+                                                    data-action="chart-line#update"
+                                                    data-chart-line-datasets-param="{{ tab.datasets|json_encode }}"
+                                                    class="active">
+                                                <span class="h3">
+                                                    {% for aantal in tab.aantallen %}
+                                                        <span data-chart-utils-target="numberAnimator"
+                                                              class="width--fixed"
+                                                              data-number="{{ aantal }}">{{ aantal }}</span>
+                                                        {% if not forloop.last %}/{% endif %}
+                                                    {% endfor %}
+                                                </span>
+                                                <span class="decorated">{{ tab.titel }}</span>
+                                            </button>
+                                        </li>
+                                    {% endfor %}
                                 </ul>
                             </div>
                         </div>
@@ -102,6 +74,24 @@
                             <a href="#">Toon deze meldingen</a>
                         </div>
                     </div>
+                </div>
+                <div class="grid-item bgc-white">
+                    <h3>Week navigatie</h3>
+                    <ul>
+                        {% if vorige_volgende_week.0 %}
+                            <li>
+                                <a href="{{ vorige_volgende_week.0.0 }}">Week {{ vorige_volgende_week.0.1 }}</a>
+                            </li>
+                        {% endif %}
+                        <li>
+                            <span>Deze week {{ week }}</span>
+                        </li>
+                        {% if vorige_volgende_week.1 %}
+                            <li>
+                                <a href="{{ vorige_volgende_week.1.0 }}">Week {{ vorige_volgende_week.1.1 }}</a>
+                            </li>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
         </section>
