dashboard signalen & meldingen

--- a/app/apps/dashboard/templates/dashboard.html
+++ b/app/apps/dashboard/templates/dashboard.html
@@ -95,6 +95,16 @@
                 </div>
             </div>
         </section>
+        <section class="section--seperated--l">
+            <div data-controller="dashboardMap">
+                <div class="container__map full-width">
+                    <div data-dashboardMap-target="map"
+                         class="map leaflet-container leaflet-touch leaflet-retina leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
+                         style="background-color: unset;
+                                border: none"></div>
+                </div>
+            </div>
+        </section>
     </div>
     <div class="screen-xl--notification">
         <p>Deze pagina is alleen te bekijken op een groter scherm.</p>
