--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -36,6 +36,7 @@
               href="{{ base_url }}{% webpack_static 'images/favicon.ico' %}" />
         <link rel="icon"
               href="{{ base_url }}{% webpack_static 'images/favicon.ico' %}" />
+        <script src="/static/rdam.geojson" type="text/javascript"></script>
         <meta name="turbo-cache-control" content="no-cache">
         {% block stylesheets %}
             <link rel="stylesheet"
