--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -100,6 +100,9 @@ main {
         &.grid-container--3cols {
             grid-template-columns: 1fr 1fr 1fr;
         }
+        &.grid-container--half {
+            grid-template-columns: 1fr 1fr;
+        }
     }
 
     .grid-item {
