--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -17,12 +17,16 @@ $green-tint01: #00811f;
 $green-tint02: #006e32;
 $green-tint03: #006e32;
 $green-tint04: #ebf5ed;
+$green-600: #e3f4dd;
 
 //badges, beetje vreemde kleuren, nog niet elders tegengekomen
 $blue-light: #0079b8;
 $blue-dark: #083968;
 $greenblue: #00846d;
 $red-tint02: #d70d0d;
+$yellow-400: #fff1ce;
+$red-400: #ffd5d5;
+$blue-200: #eaeef1;
 
 // magentatinten
 $magenta-tint01: #c93675;
