--- a/app/frontend/assets/styles/components/_dashboard.scss
+++ b/app/frontend/assets/styles/components/_dashboard.scss
@@ -6,7 +6,8 @@ canvas {
     background: transparent;
 }
 
-.header-chart {
+.dashboard-item {
+    // .header-chart {
     background-color: $white;
     padding: $alert-padding-y;
 
@@ -33,7 +34,6 @@ canvas {
     p {
         margin-top: 0;
         font-size: 0.6em;
-        line-height: 1.25em;
     }
 
     .width--fixed {
@@ -80,13 +80,34 @@ canvas {
     .icon {
         margin: 0 0.25em 0 0;
     }
+
+    &--number {
+        .number {
+            font-weight: 700;
+            padding: 0.5em;
+            background-color: $green-600;
+            &--warning {
+                background-color: $yellow-400;
+            }
+            &--danger {
+                background-color: $red-400;
+            }
+
+            &--normal {
+                background-color: $green-600;
+            }
+        }
+    }
 }
 
-.footer-chart {
+.dashboard-item-footer {
     text-align: center;
-    padding-bottom: 1em;
+    padding: 1em 0;
+    border-top: 1px solid $gray-tint06;
+    p {
+        margin: 0;
+    }
     a {
-        font-size: 0.6em;
         display: inline-block;
         color: $black;
     }
@@ -99,14 +120,12 @@ canvas {
 .container__chart--slider {
     .container__bar {
         width: 100%;
-        padding: 0 $alert-padding-x;
         box-sizing: border-box;
-        margin-top: $alert-padding-x;
-
+        margin: 2em 0 1em;
         .bar-background {
             width: 100%;
             height: 11px;
-            background-color: #eff1f4;
+            background-color: $blue-200;
             position: relative;
             margin-bottom: 0.5em;
 
@@ -116,48 +135,52 @@ canvas {
                 border-top: 4px solid $green-tint04;
                 border-bottom: 4px solid $green-tint04;
                 position: absolute;
+                background: $green-tint01;
+                background: linear-gradient(
+                    90deg,
+                    rgba(0, 129, 31, 1) 15%,
+                    rgba(255, 234, 0, 1) 43%,
+                    rgba(255, 216, 45, 1) 57%,
+                    rgba(210, 45, 31, 1) 85%
+                );
+                background-repeat: no-repeat;
                 top: 0;
                 left: 0;
+                width: 100%;
 
                 &--color-primary {
-                    background-color: $green-tint01;
                 }
                 &--color-warning {
                     background-color: $warning;
                 }
-                .slider,
-                .label {
-                    position: absolute;
-                    right: 0;
-                }
+            }
 
-                .slider {
-                    top: -7px;
-                    width: 3px;
-                    border: 2px solid $white;
-                    background-color: $black;
-                    height: 15px;
-                    border-radius: 5px;
-                }
-                .label {
-                    top: -2em;
-                    transform: translateX(calc(50% - 4px));
-                    font-weight: 700;
-                    padding: 0.3em 0.5em;
-                    border-radius: 10px;
-                    background-color: $white;
-                }
+            .slider,
+            .label {
+                position: absolute;
+                right: 0;
+            }
+            .slider {
+                top: -4px;
+                width: 3px;
+                border: 2px solid $white;
+                background-color: $black;
+                height: 15px;
+                border-radius: 5px;
+            }
+            .label {
+                top: -2em;
+                transform: translateX(calc(50% - 4px));
+                font-weight: 700;
+                padding: 0.3em 0.5em;
+                border-radius: 10px;
+                background-color: $white;
             }
         }
 
         .container__slider {
             width: 100%;
             position: relative;
-
-            .slider-wrapper {
-                position: relative;
-                height: 5px;
-            }
         }
 
         .container__flex {
@@ -169,12 +192,24 @@ canvas {
                 font-size: 0.6em;
                 line-height: 1.25em;
             }
+
+            .container__slider {
+                flex: 1 0 auto;
+            }
+            .cover {
+                width: 100%;
+                height: 11px;
+                background-color: $blue-200;
+                flex: 0 1 auto;
+                position: relative;
+                z-index: 2;
+            }
         }
     }
 }
 
 .container__table {
-    padding: 0 $alert-padding-x $alert-padding-x;
+    padding: 0 0 $alert-padding-x;
     table.dashboard {
         font-size: 0.6em;
         tr {
@@ -223,7 +258,7 @@ canvas {
             visibility: hidden;
         }
         .container__bar {
-            .bar {
+            .container__slider {
                 animation: none;
                 width: 0;
             }
@@ -237,7 +272,7 @@ canvas {
             visibility: visible;
         }
         .container__bar {
-            .bar {
+            .container__slider {
                 width: 100%;
                 animation: fullwidth 1.5s ease-in-out forwards;
                 animation-iteration-count: 1;
