--- a/app/apps/dashboard/templates/dashboard.html
+++ b/app/apps/dashboard/templates/dashboard.html
@@ -29,7 +29,7 @@
                 <div class="grid-item bgc-white"
                      data-controller="chart-line"
                      data-chart-line-data-value='{{ aantallen_tabs.0|json_encode }}'>
-                    <div class="header-chart">
+                    <div class="dashboard-item">
                         <div class="container__flex">
                             <div>
                                 <span class="h6">
@@ -65,13 +65,13 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
-                    <div>
-                        <canvas data-chart-line-target="canvas"></canvas>
-                    </div>
-                    <div class="footer-chart">
-                        <div class="align--center">
-                            <a href="#">Toon deze meldingen</a>
+                        <div>
+                            <canvas data-chart-line-target="canvas"></canvas>
+                        </div>
+                        <div class="dashboard-item-footer">
+                            <p>
+                                <a href="#">Toon deze meldingen</a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                 <div class="grid-item bgc-white"
                      data-controller="chart-line"
                      data-chart-line-data-value='{{ status_veranderingen_tabs.0|json_encode }}'>
-                    <div class="header-chart">
+                    <div class="dashboard-item">
                         <div class="container__flex">
                             <div>
                                 <span class="h6">
@@ -137,13 +137,13 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
-                    <div>
-                        <canvas data-chart-line-target="canvas"></canvas>
-                    </div>
-                    <div class="footer-chart">
-                        <div class="align--center">
-                            <a href="#">Toon deze meldingen</a>
+                        <div>
+                            <canvas data-chart-line-target="canvas"></canvas>
+                        </div>
+                        <div class="dashboard-item-footer">
+                            <div class="align--center">
+                                <a href="#">Toon deze meldingen</a>
+                            </div>
                         </div>
                     </div>
                 </div>
