--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -91,6 +91,10 @@ main {
     grid-auto-columns: minmax(0, 1fr);
     gap: 32px;
 
+    + .grid-container {
+        margin-top: 32px;
+    }
+
     @media (min-width: map-get($grid-breakpoints, md)) {
         grid-template-columns: 66fr 34fr;
 
