chartjs duration for y axis

--- a/app/apps/dashboard/templates/dashboard.html
+++ b/app/apps/dashboard/templates/dashboard.html
@@ -100,6 +100,7 @@
             <div class="grid-container" data-controller="chart-utils">
                 <div class="grid-item bgc-white"
                      data-controller="chart-line"
+                     data-chart-line-y-ticks-value='duration'
                      data-chart-line-data-value='{{ status_veranderingen_tabs.0|json_encode }}'>
                     <div class="dashboard-item">
                         <div class="container__flex">
