--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -27,6 +27,7 @@ $red-tint02: #d70d0d;
 $yellow-400: #fff1ce;
 $red-400: #ffd5d5;
 $blue-200: #eaeef1;
+$gray-600: #7f838a;
 
 // magentatinten
 $magenta-tint01: #c93675;
