--- a/app/frontend/assets/styles/components/_dashboard.scss
+++ b/app/frontend/assets/styles/components/_dashboard.scss
@@ -96,13 +96,18 @@ canvas {
                 background-color: $green-600;
             }
         }
+
+        .dashboard-item-footer {
+            margin-top: 1em;
+            padding-top: 1em;
+            border-top: 1px solid $gray-600;
+        }
     }
 }
 
 .dashboard-item-footer {
     text-align: center;
     padding: 1em 0;
-    border-top: 1px solid $gray-tint06;
     p {
         margin: 0;
     }
@@ -120,7 +125,7 @@ canvas {
     .container__bar {
         width: 100%;
         box-sizing: border-box;
-        margin: 2em 0 1em;
+        padding: 2em 0 1em;
         .bar-background {
             width: 100%;
             height: 11px;
